Revert "Merge branch 'feat/product-update' into 'main'"
This reverts merge request !21
