# docs/swagger.yaml
@@ -74,17 +74,6 @@ definitions:
       quantity:
         type: integer
     type: object
-  request.UpdateProductRequest:
-    properties:
-      description:
-        type: string
-      imgPath:
-        type: string
-      menu:
-        type: boolean
-      name:
-        type: string
-    type: object
   response.Customer:
     properties:
       document:
@@ -212,27 +201,6 @@ definitions:
       name:
         type: string
     type: object
-  response.ProductUpdatedResponse:
-    properties:
-      amount:
-        type: integer
-      category:
-        type: string
-      description:
-        type: string
-      id:
-        type: string
-      img_path:
-        type: string
-      menu:
-        type: boolean
-      name:
-        type: string
-      number:
-        type: integer
-      updated_at:
-        type: string
-    type: object
   v1.ErrorResponse:
     properties:
       code:
@@ -257,7 +225,7 @@ paths:
         schema:
           $ref: '#/definitions/request.CreateCustomer'
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -288,7 +256,7 @@ paths:
         required: true
         type: string
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -315,7 +283,7 @@ paths:
     get:
       description: Get Ingredient types
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -349,7 +317,7 @@ paths:
         name: type
         type: string
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -384,7 +352,7 @@ paths:
         schema:
           $ref: '#/definitions/request.CreateIngredientRequest'
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -417,7 +385,7 @@ paths:
         required: true
         type: string
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -451,7 +419,7 @@ paths:
         schema:
           $ref: '#/definitions/request.CreateOrder'
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -483,7 +451,7 @@ paths:
         name: status
         type: string
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -512,7 +480,7 @@ paths:
     get:
       description: Get Product Categories
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -546,7 +514,7 @@ paths:
         name: category
         type: string
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -581,7 +549,7 @@ paths:
         schema:
           $ref: '#/definitions/request.CreateProductRequest'
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -614,7 +582,7 @@ paths:
         required: true
         type: string
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -635,39 +603,6 @@ paths:
           schema:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: Delete Product by number
-    patch:
-      description: Update Product
-      parameters:
-      - description: Request Body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/request.UpdateProductRequest'
-      produces:
-      - server/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ProductUpdatedResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/v1.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/v1.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/v1.ErrorResponse'
-        "503":
-          description: Service Unavailable
-          schema:
-            $ref: '#/definitions/v1.ErrorResponse'
-      summary: Update Product
   /v1/products/{productID}:
     get:
       description: Get Product by id
@@ -678,7 +613,7 @@ paths:
         required: true
         type: string
       produces:
-      - server/json
+      - application/json
       responses:
         "200":
           description: OK
